Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "travel_month=\"January\""
+   ]
   },
   {
    "cell_type": "markdown",
