--- a/index.ipynb
+++ b/index.ipynb
@@ -97,23 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "number_of_weeks = 3\n",
-    "number_of_weeks\n"
+    "number_of_weeks\n",
+    "number_of_weeks=5\n"
    ]
   },
   {
